--- a/ttt.css
+++ b/ttt.css
@@ -7,7 +7,7 @@ body {
 
 
 .ttt-board {
-    width: 60%;
+    width: 55%;
     margin: auto;
 }
 
@@ -15,20 +15,22 @@ body {
 h1, h3 {
     text-align: center;
     color: white;
+    text-shadow: 2px 2px 4px #000000;
 }
 
 .player-1 {
-    color: limegreen
+    color: black
 }
 
 .player-2 {
-    color: blue;
+    color: red;
+    text-shadow: 2px 2px 4px #000000;;
 }
 
 
 .row {
     width: 100%;
-    height: 180px;
+    height: 175px;
     margin: auto;
     display: flex;
 }
@@ -52,4 +54,27 @@ h1, h3 {
 
 .col-1, .col-2 {
     border-right: 5px solid white;
+}
+
+
+a {
+    background-color: black;
+    color: white;
+    font-size: 1rem;
+    padding: 3.5px;
+    border: 1px solid white;
+    border-top-left-radius: 30%;
+    border-bottom-right-radius: 30%;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:hover {
+    background-color: white;
+    color: black;
+}
+
+.btn-container {
+    display: flex;
+    justify-content: center;
 }
